Fix double borders within bar/beats

--- a/src/components/daw/Bar.module.scss
+++ b/src/components/daw/Bar.module.scss
@@ -12,3 +12,13 @@
 
   overflow: hidden;
 }
+
+.controls {
+  label {
+    input,
+    select {
+      border-top-color: transparent;
+      border-bottom-color: transparent;
+    }
+  }
+}
