--- a/src/components/daw/Beat.module.scss
+++ b/src/components/daw/Beat.module.scss
@@ -30,8 +30,9 @@
   padding: 0.25rem;
 
   border: 1px solid #0e0e11;
-  border-bottom: 1px solid transparent;
-  border-radius: 0px;
+  border-left-color: transparent;
+  border-bottom-color: transparent;
+  border-radius: 10px;
 
   flex: 1;
 
